<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowPlayingActivity">

    <ImageView
        android:id="@+id/musicImageNowPlayingActivity"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:elevation="@dimen/elevation4"
        android:paddingTop="@dimen/padding20"
        android:paddingStart="@dimen/padding20"
        android:paddingEnd="@dimen/padding20"
        android:paddingBottom="@dimen/padding16"
        android:src="@drawable/image"
        app:layout_constraintBottom_toTopOf="@id/centerDot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cover_image" />


    <LinearLayout
        android:id="@+id/centerDot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <TextView
            android:id="@+id/musicTitleNowPlayingActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8"
            android:layout_marginEnd="@dimen/margin8"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize22"
            tools:text="I would" />

        <TextView
            android:id="@+id/musicArtistNowPlayingActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8"
            android:layout_marginEnd="@dimen/margin8"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="@dimen/textSize16"
            tools:text="Connie Talbot" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/favPlaylistAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginBottom="@dimen/margin8"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/containerForControlsNowPlayingActivity">

        <ImageButton
            android:id="@+id/playlistButtonNowPlayingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/margin8"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/playlist_icon"
            android:padding="@dimen/padding4"
            android:src="@drawable/ic_queue_music_black_24dp" />

        <ImageButton
            android:id="@+id/favButtonNowPlayingActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin8"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/fav_icon"
            android:padding="@dimen/padding4"
            android:src="@drawable/ic_favorite_border_black_24dp" />

        <ImageButton
            android:id="@+id/addButtonNowPlayingActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin8"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_icon"
            android:padding="@dimen/padding4"
            android:src="@drawable/ic_add_black_24dp" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/containerForControlsNowPlayingActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/play_button_background"
        android:elevation="@dimen/elevation6"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <SeekBar
            android:id="@+id/seekBarNowPlayingActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8"
            android:layout_marginTop="@dimen/margin8"
            android:layout_marginEnd="@dimen/margin8" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin20"
            android:layout_marginEnd="@dimen/margin20">

            <TextView
                android:id="@+id/currentTimeNowPlayingActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize14"
                tools:text="01:17" />

            <TextView
                android:id="@+id/musicDurationNowPlayingActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize14"
                tools:text="03:21" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8"
            android:layout_marginEnd="@dimen/margin8"
            android:layout_marginBottom="@dimen/margin8">

            <ImageButton
                android:id="@+id/shuffleButtonNowPlayingActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/margin8"
                android:background="@drawable/button_background"
                android:contentDescription="@string/shuffle_icon"
                android:padding="@dimen/padding4"
                android:src="@drawable/ic_shuffle_black_24dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/prevButtonNowPlayingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin8"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/prev_icon"
                    android:padding="@dimen/padding4"
                    android:src="@drawable/ic_skip_previous_black_big" />

                <ImageButton
                    android:id="@+id/playPauseButtonNowPlayingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin8"
                    android:background="@drawable/button_background_active"
                    android:contentDescription="@string/play_icon"
                    android:padding="@dimen/padding12"
                    android:src="@drawable/ic_play_arrow_black_big" />

                <ImageButton
                    android:id="@+id/nextButtonNowPlayingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin8"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/next_icon"
                    android:padding="@dimen/padding4"
                    android:src="@drawable/ic_skip_next_black_big" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/loopButtonNowPlayingActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="@dimen/margin8"
                android:background="@drawable/button_background"
                android:contentDescription="@string/loop_icon"
                android:padding="@dimen/padding4"
                android:src="@drawable/ic_loop_black_24dp" />
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/containerForFragmentNowPlayingActivity"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:layout_margin="@dimen/margin8"
        android:elevation="@dimen/elevation6"
        app:layout_constraintBottom_toBottomOf="@id/favPlaylistAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>