<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibraryActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutLibraryActivity"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorHeight="@dimen/tabIndicatorHeight"
        app:tabSelectedTextColor="@color/colorAccentSecondary"
        app:tabTextColor="@color/colorAccentSecondary" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerLibraryActivity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraint"
        app:layout_constraintBottom_toTopOf="@id/nowPlayingMusic"
        app:layout_constraintTop_toBottomOf="@id/tabLayoutLibraryActivity" />

    <FrameLayout
        android:id="@+id/containerForDetails"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:elevation="@dimen/elevation6"
        app:layout_constraintBottom_toTopOf="@id/nowPlayingMusic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nowPlayingMusic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nowPlayingHeight70"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/elevation4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/decorHeight"
            android:background="@color/colorAccentSecondary"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageNowPlaying"
            android:layout_width="@dimen/circleRadius46"
            android:layout_height="@dimen/circleRadius46"
            android:layout_margin="@dimen/margin8"
            android:src="@drawable/image"
            app:civ_border_color="@color/colorAccentSecondary"
            app:civ_border_width="@dimen/civBorder1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin8"
            android:paddingEnd="@dimen/margin8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/linearLayout"
            app:layout_constraintStart_toEndOf="@id/imageNowPlaying"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleNowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/colorAccentSecondary"
                android:textSize="@dimen/textSize14"
                tools:text="I would" />

            <TextView
                android:id="@+id/artistNowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/colorAccentSecondary"
                android:textSize="@dimen/textSize12"
                tools:text="Connie Talbot" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/prevCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin8"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/prev_icon"
                android:src="@drawable/ic_skip_previous_black_24dp" />

            <ImageButton
                android:id="@+id/pausePlayCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding4"
                android:layout_margin="@dimen/margin8"
                android:background="@drawable/button_background_active"
                android:contentDescription="@string/play_icon"
                android:src="@drawable/ic_pause_black_24dp" />

            <ImageButton
                android:id="@+id/nextCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin8"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/next_icon"
                android:src="@drawable/ic_skip_next_black_24dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>